--- a/browser/css/jsdialogs.css
+++ b/browser/css/jsdialogs.css
@@ -21,7 +21,7 @@
 	z-index: 2001;
 }
 
-.jsdialog.root-container {
+.jsdialog.root-container:not(.autofilter) {
 	margin: .5em 1em; /*same as in .ui-dialog */
 }
 
